Fixed alignement on projects page

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -11,6 +11,7 @@
   padding-top: 20rem;
   background-color: black;
   color: white;
+  text-align: center;
 
   background-image: url("/homepageBackground_combined.png");
   background-size: cover; /* Ensures the image covers the entire page */
